fixed minor text align issue on sprint roadmap page

--- a/Client/src/Components/SprintRoadmap/SprintRoadmap.scss
+++ b/Client/src/Components/SprintRoadmap/SprintRoadmap.scss
@@ -81,6 +81,7 @@
         height: 75%;
         margin: 0;
         padding-top: .5rem;
+        text-align: center;
 
         @include desktop {
             font-size: 1.25rem;
